# gernytci

./: .gitignore  Cargo.toml  README.org  cli.yaml
src/: bixygau.rs  kampu.rs  main.rs  reltai.rs  sidju.rs  tamsmi.rs  tanru.rs  vanbi.rs  vlacku.rs  zvafahi.rs
src/gerna/: brivla.rs  cmavo.rs  gismu.rs  lerfu.rs  lujvo.rs  mod.rs  rafsi.rs
src/tutci/: bai.rs  bixygau.rs  coi.rs  jvofihi.rs  katna.rs  mod.rs  tamsmi.rs  zvafahi.rs
