[package]
name = "gernytci"
version = "0.1.0"
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
flate2 = "0.2"
distance = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sxd-xpath = "0.4"
sxd-document = "0.3"
lazy_static "1.0"
