[package]
name = "gernytci"
version = "0.1.0"
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
flate2 = "0.2"
distance = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.3", features = ["allow-non-simd"] }
sxd-xpath = "0.4"
sxd-document = "0.3"
colored = "1.9"
itertools = "0.9"
difference = "2.0"
clap = { version = "2.33.3", features = ["yaml"] }
derive_more = "0.99.11"
